Fixing UI/UX usability on mobile - final touch

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -60,5 +60,17 @@ body {
   color: #ffffff; /* De tekst blijft fel wit */
 }
 
+.leaflet-container {
+  z-index: 0 !important;
+}
+.leaflet-pane,
+.leaflet-tile,
+.leaflet-overlay-pane,
+.leaflet-shadow-pane,
+.leaflet-marker-pane,
+.leaflet-tooltip-pane,
+.leaflet-popup-pane {
+  z-index: 0 !important;
+}
 
 
